2004-03-02  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/draw-context.cpp (fit_and_split): Fix to fix to edge case in
	freehand tool.  (Hopefully to be replaced by different approach.)

	* src/dialogs/transformation.cpp (sp_transformation_move_apply,
	sp_transformation_scale_apply, sp_transformation_rotate_apply,
	sp_transformation_skew_apply):
	Remove unused `copy' parameter.  Update caller.

	* src/dialogs/align.cpp, src/dialogs/transformation.cpp: Cleanups.

	* src/display/nr-arena-shape.cpp (nr_arena_shape_set_path):
	Remove affine argument (all current callers were passing NULL) and
	unused `lieutenant' argument.  Update callers.

	* src/selection-chemistry.h, src/selection-chemistry.cpp
	(sp_selection_delete, sp_selection_duplicate, sp_edit_clear_all,
	sp_edit_select_all, sp_selection_group, sp_selection_ungroup,
	sp_selection_raise, sp_selection_raise_to_top, sp_selection_lower,
	sp_selection_lower_to_bottom, sp_selection_cut, sp_selection_copy,
	sp_selection_paste, sp_selection_paste_style):
	Remove unused parameters.  Update callers.

2004-03-01  Nathan Hurst <njh@mail.csse.monash.edu.au>

	* src/draw-context.cpp: Fixed edge case in freehand tool.  Added
	comment about curve fitting.

2004-03-01  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/sp-guide.cpp (sp_guide_set_property, sp_guide_get_property):
	Minor cleanups.

	* src/interface.h, src/interface.cpp
	(sp_ui_new_view, sp_ui_new_view_preview): Make static.

	* src/dyna-draw-context.cpp (sp_ddc_defaults):
	* src/rect-context.cpp (sp_rc_defaults): 
	Cleanup: Use table and loop instead of copy&paste.

	* configure.in: If -Wno-unused-parameter isn't recognized (g++ 3.2 and
	earlier) then use -Wno-unused.

	* src/libnr/nr-point.h: NR::Point: Add explicit copy constructor and
	operator= in the hope of fixing #907059.

	* src/desktop-events.cpp (sp_dt_ruler_event): NR::Point'ification.

	* src/selection.cpp (sp_selection_item_selected):